USB force fast charging and enabled.
-Use base from Chad Froebel <chadfroebel@gmail.com> so we continue to
use the same generic sysfs mechanism

-Referenced franco's git for drivers/usb/otg/msm_otg.c changes
https://github.com/franciscofranco/mako/commit/5a8a4c8e23c7e1df39c740b9ce1d5dda20b0ede3

Off by default

Turn on:
echo 1 > /sys/kernel/fast_charge/force_fast_charge

Turn off:
echo 0 > /sys/kernel/fast_charge/force_fast_charge

Signed-off-by: Paul Reioux <reioux@gmail.com>

Conflicts:
	arch/arm/mach-msm/Kconfig
	arch/arm/mach-msm/fastchg.c
	include/linux/fastchg.h

Conflicts:
	CM/arch/arm/configs/mako_defconfig
	arch/arm/configs/mako_defconfig

--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -784,7 +784,6 @@ CONFIG_PM=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -3316,4 +3315,6 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 # CONFIG_PARTIALRESUME is not set
+CONFIG_FORCE_FAST_CHARGE=y
