--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -784,7 +784,6 @@ CONFIG_PM=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -3316,4 +3315,6 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 # CONFIG_PARTIALRESUME is not set
+CONFIG_FORCE_FAST_CHARGE=y
