--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -382,4 +382,4 @@ endif
 obj-$(CONFIG_MSM_CPU_PWRCTL) +=  msm_cpu_pwrctl.o
 
 obj-$(CONFIG_HAS_MACH_MEMUTILS) += memutils/
-
+obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
