--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -675,6 +675,12 @@ config TOUCH_WAKE
 	help
 	  Say Y here to enable Touch Wake
 
+config UID_CPUTIME
+	tristate "Per-UID cpu time statistics"
+	default n
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
