--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -73,3 +73,4 @@ obj-$(CONFIG_BU52031NVX) += pm8xxx-cradle.o
 obj-$(CONFIG_TOUCH_WAKE) += touch_wake.o
 obj-$(CONFIG_SLIMPORT_ANX7808)	+= slimport_anx7808/
 obj-$(CONFIG_GAMMA_CONTROL) += gamma_control.o
+obj-$(CONFIG_UID_CPUTIME) += uid_cputime.o
