Enable Touch wake and doubletap to wake.

--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -3305,3 +3305,5 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_INTELLI_THERMAL=y
 # CONFIG_RESTRICT_ROOTFS_SLAVE is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_TOUCH_WAKE=y
+CONFIG_DOUBLETAP_WAKE=y
