--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -229,10 +229,12 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
