--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,14 +123,10 @@ config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
 	  you to get a full dynamic frequency capable system by simply
 	  loading your cpufreq low-level hardware driver.
 
-config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
-          bool "zzmoove"
-          select CPU_FREQ_GOV_ZZMOOVE
-          select CPU_FREQ_GOV_PERFORMANCE
-          help
-          Use the CPUFreq governor 'zzmoove' as default, using predefined
-          frequency lookup tables and optimized scaling triggers instead of
-          % frequency steps to get smooth up/downscaling dependant on CPU load.
+config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
+	bool "nightmare"
+	select CPU_FREQ_GOV_NIGHTMARE
+	help
 
 
 endchoice
@@ -247,14 +243,9 @@ config CPU_FREQ_GOV_INTELLIDEMAND
           do fast frequency switching (i.e, very low latency frequency
           transitions).
 
-config CPU_FREQ_GOV_ZZMOOVE
-        tristate "'zzmoove' cpufreq governor"
-        depends on CPU_FREQ
-        help
-          'zzmoove' - based on cpufreq_conservative, using predefined
-          frequency lookup tables and optimized scaling triggers instead of
-          % frequency steps to get smooth up/downscaling dependant on CPU load.
-          If in doubt, say N.
+config CPU_FREQ_GOV_NIGHTMARE
+	tristate "'nightmare' cpufreq governor"
+	depends on CPU_FREQ
 
 
 menu "x86 CPU frequency scaling drivers"
