--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,10 +123,11 @@ config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
 	  you to get a full dynamic frequency capable system by simply
 	  loading your cpufreq low-level hardware driver.
 
-config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
-	bool "nightmare"
-	select CPU_FREQ_GOV_NIGHTMARE
+config CPU_FREQ_DEFAULT_GOV_LIONHEART
+	bool "lionheart"
+	select CPU_FREQ_GOV_LIONHEART
 	help
+	  Use the CPUFreq governor 'Lionheart' as default.
 
 
 endchoice
@@ -243,10 +244,11 @@ config CPU_FREQ_GOV_INTELLIDEMAND
           do fast frequency switching (i.e, very low latency frequency
           transitions).
 
-config CPU_FREQ_GOV_NIGHTMARE
-	tristate "'nightmare' cpufreq governor"
+config CPU_FREQ_GOV_LIONHEART
+	tristate "'Lionheart' cpufreq governor"
 	depends on CPU_FREQ
-
+	help
+	  'Lionheart' - A brave and agile conservative-based governor.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
