Revert "mm: replace vma prio_tree with an interval tree"
This reverts commit 2c78d6731613d2118a11a552fc77753deca59da3.

--- a/mm/Makefile
+++ b/mm/Makefile
@@ -11,10 +11,11 @@ mmu-$(CONFIG_MMU)	:= fremap.o highmem.o madvise.o memory.o mincore.o \
 obj-y			:= filemap.o mempool.o oom_kill.o fadvise.o \
 			   maccess.o page_alloc.o page-writeback.o \
 			   readahead.o swap.o truncate.o vmscan.o shmem.o \
-			   util.o mmzone.o vmstat.o backing-dev.o \
+			   prio_tree.o util.o mmzone.o vmstat.o backing-dev.o \
 			   page_isolation.o mm_init.o mmu_context.o percpu.o \
-			   compaction.o interval_tree.o $(mmu-y)\
+			   compaction.o $(mmu-y) \
 			   showmem.o vmpressure.o
+
 
 
 obj-y += init-mm.o
