--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -392,7 +392,7 @@ CONFIG_MACH_APQ8064_MAKO=y
 CONFIG_LGE_QFPROM_INTERFACE=y
 CONFIG_UPDATE_LCDC_LUT=y
 CONFIG_LCD_KCAL=y
-CONFIG_EARJACK_DEBUGGER=y
+# CONFIG_EARJACK_DEBUGGER is not set
 CONFIG_LGE_CRASH_HANDLER=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_MSM_AMSS_VERSION=6225
@@ -485,7 +485,7 @@ CONFIG_MSM_LPASS_8960=y
 CONFIG_MSM_WCNSS_SSR_8960=y
 CONFIG_MSM_GSS_SSR_8064=y
 # CONFIG_MSM_BUSPM_DEV is not set
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
@@ -673,7 +673,7 @@ CONFIG_SECCOMP=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
-CONFIG_CP_ACCESS=y
+# CONFIG_CP_ACCESS is not set
 
 #
 # Boot options
@@ -1269,8 +1269,8 @@ CONFIG_SCSI_PROC_FS=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_CONSTANTS is not set
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 
 #
@@ -1373,7 +1373,7 @@ CONFIG_SLIP_MODE_SLIP6=y
 # CONFIG_USB_PEGASUS is not set
 # CONFIG_USB_RTL8150 is not set
 CONFIG_USB_USBNET=y
-CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_CDCETHER is not set
 # CONFIG_USB_NET_CDC_EEM is not set
 # CONFIG_USB_NET_CDC_NCM is not set
@@ -3274,14 +3274,14 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
-CONFIG_XZ_DEC=y
+# CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
-CONFIG_XZ_DEC_ARM=y
-CONFIG_XZ_DEC_ARMTHUMB=y
+# CONFIG_XZ_DEC_ARM is not set
+# CONFIG_XZ_DEC_ARMTHUMB is not set
 # CONFIG_XZ_DEC_SPARC is not set
-CONFIG_XZ_DEC_BCJ=y
+# CONFIG_XZ_DEC_BCJ is not set
 # CONFIG_XZ_DEC_TEST is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
