--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -540,6 +540,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_HAS_MACH_MEMUTILS=y
 
 #
 # System MMU
