--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -143,6 +143,7 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_FB_MSM_LCD_NOTIFY=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -179,7 +180,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
-CONFIG_GENERIC_SMP_IDLE_THREAD=y
+# CONFIG_GENERIC_SMP_IDLE_THREAD is not set
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
