Revert "Added MSM_HOTPLUG and disabled GENERIC_SMP_IDLE_THREAD."
This reverts commit 87bb2bd8d2046c5ffe585d500c58ae36978954a6.

--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -143,7 +143,6 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
-CONFIG_MSM_HOTPLUG=y
 CONFIG_FB_MSM_LCD_NOTIFY=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -180,7 +179,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
-# CONFIG_GENERIC_SMP_IDLE_THREAD is not set
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
