--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -1209,7 +1209,6 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_STAT=y
 # CONFIG_BMP085 is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_WL127X_RFKILL is not set
@@ -1217,6 +1216,8 @@ CONFIG_UID_STAT=y
 # CONFIG_TSPP is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_PMIC8XXX_VIBRATOR is not set
+CONFIG_UID_STAT=y
+CONFIG_UID_CPUTIME=y
 CONFIG_ANDROID_VIBRATOR=y
 # CONFIG_TOUCHSENSE_VIBRATOR is not set
 # CONFIG_PMIC8XXX_NFC is not set
