--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -490,9 +490,9 @@ CONFIG_MSM_WCNSS_SSR_8960=y
 CONFIG_MSM_GSS_SSR_8064=y
 # CONFIG_MSM_BUSPM_DEV is not set
 # CONFIG_MSM_TZ_LOG is not set
-# CONFIG_MSM_RPM_LOG is not set
-# CONFIG_MSM_RPM_STATS_LOG is not set
-# CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
+CONFIG_MSM_RPM_LOG=y
+CONFIG_MSM_RPM_STATS_LOG=y
+CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -3314,3 +3314,4 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
+# CONFIG_PARTIALRESUME is not set
