defconfig: Enable CONFIG_PARTIALRESUME

--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -3316,5 +3316,5 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
-# CONFIG_PARTIALRESUME is not set
+CONFIG_PARTIALRESUME=y
 CONFIG_FORCE_FAST_CHARGE=y
