--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -166,7 +166,7 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 CONFIG_VM_EVENT_COUNTERS=y
-# CONFIG_SLUB_DEBUG is not set
+CONFIG_SLUB_DEBUG=y
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -492,7 +492,7 @@ CONFIG_MSM_GSS_SSR_8064=y
 # CONFIG_MSM_TZ_LOG is not set
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
+# CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -508,6 +508,7 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
+CONFIG_MSM_RUN_QUEUE_STATS=y
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -3315,6 +3316,6 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_DOUBLETAP_WAKE=y
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_PARTIALRESUME=y
 CONFIG_FORCE_FAST_CHARGE=y
