--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -166,7 +166,7 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -193,7 +193,7 @@ CONFIG_ARCH_WANT_IPC_PARSE_VERSION=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
+# CONFIG_SLABINFO is not set
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 # CONFIG_MODULES is not set
@@ -491,8 +491,8 @@ CONFIG_MSM_WCNSS_SSR_8960=y
 CONFIG_MSM_GSS_SSR_8064=y
 # CONFIG_MSM_BUSPM_DEV is not set
 # CONFIG_MSM_TZ_LOG is not set
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
+# CONFIG_MSM_RPM_LOG is not set
+# CONFIG_MSM_RPM_STATS_LOG is not set
 # CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
@@ -509,7 +509,7 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
-CONFIG_MSM_RUN_QUEUE_STATS=y
+# CONFIG_MSM_RUN_QUEUE_STATS is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -1565,8 +1565,8 @@ CONFIG_N_SMUX=y
 CONFIG_N_SMUX_LOOPBACK=y
 CONFIG_SMUX_CTL=y
 # CONFIG_TRACE_SINK is not set
-CONFIG_DEVMEM=y
-CONFIG_DEVKMEM=y
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 
 #
 # Serial drivers
