--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -144,6 +144,7 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_FB_MSM_LCD_NOTIFY=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
