--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -2184,7 +2184,7 @@ CONFIG_MSM_VIDC_VDEC=y
 # CONFIG_MSM_VIDC_CONTENT_PROTECTION is not set
 CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
-CONFIG_FB_MSM_LOGO=y
+# CONFIG_FB_MSM_LOGO is not set
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_FB_MSM_MDP_HW=y
@@ -3321,3 +3321,4 @@ CONFIG_DOUBLETAP_WAKE=y
 CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_PARTIALRESUME=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_RESTRICT_ROOTFS_SLAVE=y
