--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -546,6 +546,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # System MMU
@@ -692,6 +693,7 @@ CONFIG_ZBOOT_ROM_BSS=0
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
+CONFIG_ATAGS_PROC=y
 CONFIG_KEXEC_HARDBOOT=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
@@ -758,6 +760,7 @@ CONFIG_CPU_FREQ_MSM=y
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
+CONFIG_KERNEL_MODE_NEON=y
 
 #
 # Userspace binary formats
@@ -796,6 +799,7 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_NET=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # Networking options
@@ -1549,6 +1553,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
+CONFIG_TOUCH_WAKE=y
+CONFIG_DOUBLETAP_WAKE=y
 
 #
 # Hardware I/O ports
@@ -2142,6 +2148,7 @@ CONFIG_MSM_CSI20_HEADER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
@@ -2974,6 +2981,14 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_GFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_IO_TRACE is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -3161,6 +3176,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_XOR_BLOCKS=y
 CONFIG_CRYPTO=y
 
 #
@@ -3183,6 +3199,8 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 # CONFIG_CRYPTO_GF128MUL is not set
 # CONFIG_CRYPTO_NULL is not set
 # CONFIG_CRYPTO_PCRYPT is not set
+CONFIG_CRYPTO_CRYPTD=y
+CONFIG_CRYPTO_ABLK_HELPER=y
 CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_AUTHENC=y
 
@@ -3224,6 +3242,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
@@ -3235,6 +3254,8 @@ CONFIG_CRYPTO_SHA512_ARM_NEON=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_AES_ARM=y
+# CONFIG_CRYPTO_AES_ARM_BS is not set
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -3317,16 +3338,3 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
-CONFIG_ATAGS_PROC=y
-CONFIG_XOR_BLOCKS=y
-CONFIG_KERNEL_MODE_NEON=y
-CONFIG_CRYPTO_CRYPTD=y
-CONFIG_CRYPTO_ABLK_HELPER=y
-CONFIG_CRYPTO_SHA1_ARM=y
-CONFIG_CRYPTO_AES_ARM=y
-# CONFIG_CRYPTO_AES_ARM_BS is not set
-CONFIG_MSM_KGSL_SIMPLE_GOV=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_TOUCH_WAKE=y
-CONFIG_DOUBLETAP_WAKE=y
-CONFIG_FORCE_FAST_CHARGE=y
