Add Dy_hotplug and fixes
Thanks to Stratos for your great hotplug and @spezi77 for help

--- a/CM/arch/arm/configs/mako_defconfig
+++ b/CM/arch/arm/configs/mako_defconfig
@@ -142,6 +142,7 @@ CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
+CONFIG_DYN_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_ASMP=y
 CONFIG_FB_MSM_LCD_NOTIFY=y
